<resources>
    <string name="app_name">Weather Info</string>

    <!-- Menu items -->

    <string name="action_add">Add place</string>
    <string name="action_view">View on map</string>
    <string name="action_sync">Sync with server</string>
    <string name="action_delete">Delete record</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_previous">Previous place</string>
    <string name="action_next">Next place</string>

    <!-- openweathermap.org parameters -->

    <string name="openweathermap_api_key">f4178cee3f64ae240a7cc0a602369fb2</string>
    <!--    <string name="google_maps_api_key">AIzaSyAgkApUvzu_0MwjHfbvoee8SmFTyPhIreg</string>-->
    <string name="web_service_url">http://api.openweathermap.org/data/2.5/forecast/daily?q=</string>
    <string name="mapbox_api_key">pk.eyJ1IjoiYXJzb25lIiwiYSI6ImNqNGp2NDRoeDBid3YzM3FzaHYwMWdiMzAifQ.mYNMcy5YsMKFRXlEt6jNJw</string>

    <!-- UI text -->

    <string name="cities_title_cities_empty">ADD PLACES TO LIST</string>
    <string name="hint_city_add">Pick or enter place name</string>
    <string name="edit_save">Save</string>
    <string name="edit_cancel">Cancel</string>
    <string name="text_city">Place</string>
    <string name="ok">OK</string>
    <string name="button_delete_city_cancel">Cancel</string>
    <string name="button_delete_city">Delete</string>

    <!--  messages  -->

    <string name="message_fill_city">Fill place name</string>
    <string name="message_invalid_url">Incorrect URL</string>
    <string name="message_city_not_found">Not found</string>
    <string name="message_wait_for_data">Getting data&#8230;</string>
    <string name="message_city_has_in_db">Such city already present in database</string>
    <string name="no_results">No result</string>
    <string name="cannot_get_place_name">Can`t get place name</string>
    <string name="data_not_found">Data not found</string>

    <!--Basic user location permission toasts-->

    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <!-- delete city item confirm dialog -->

    <string name="delete_dialog_question">Confirm</string>
    <string name="delete_dialog_text">Do you want delete record(s)?</string>
    <string name="delete_dialog_ok">Delete</string>
    <string name="delete_dialog_cancel">Cancel</string>
    <string name="rows_deleted">%s record(s) deleted</string>

    <!-- city ListView item format -->

    <string name="entered_city">%s</string>
    <string name="returned_city">/%s</string>

    <!-- weather ListView item format -->

    <string name="weather_humidity">Humidity: %s</string>
    <string name="weather_pressure">Pressure: %1$.1f hPa/ %2$.1f mmHg</string>
    <string name="weather_wind_direction">Wind direction: %s°</string>
    <string name="weather_data_obtained">Data obtained: %s</string>

    <!-- Metric / Celsius -->

    <string name="m_weather_wind_speed">Wind speed: %.1f m/s</string>
    <string name="m_weather_min_max_temp">Min./max. day temperature: %1$s °C/ %2$s °C</string>
    <string name="m_weather_morning_temp">Morning temperature: %s °C</string>
    <string name="m_weather_day_temp">Day temperature: %s °C</string>
    <string name="m_weather_evening_temp">Evening temperature: %s °C</string>
    <string name="m_weather_night_temp">Night temperature: %s °C</string>

    <!-- Imperial / Fahrenheit -->

    <string name="i_weather_wind_speed">Wind speed: %.1f mph</string>
    <string name="i_weather_min_max_temp">Min./max. day temperature: %1$s ℉/ %2$s ℉</string>
    <string name="i_weather_morning_temp">Morning temperature: %s ℉</string>
    <string name="i_weather_day_temp">Day temperature: %s ℉</string>
    <string name="i_weather_evening_temp">Evening temperature: %s ℉</string>
    <string name="i_weather_night_temp">Night temperature: %s ℉</string>

    <!-- The following map styles are available to all accounts using a valid access token: -->

    <!--    <string-array name="map_styles_array">
            <item>mapbox://styles/mapbox/light-v9</item>
            <item>mapbox://styles/mapbox/streets-v10</item>
            <item>mapbox://styles/mapbox/outdoors-v10</item>
            <item>mapbox://styles/mapbox/dark-v9</item>
                <item>mapbox://styles/mapbox/satellite-v9</item>
                    <item>mapbox://styles/mapbox/satellite-streets-v10</item>
            <item>mapbox://styles/mapbox/traffic-day-v2</item>
            <item>mapbox://styles/mapbox/traffic-night-v2</item>
        </string-array>-->

    <!--    <string-array name="map_styles_names">
            <item>light</item>
            <item>streets</item>
            <item>outdoors</item>
            <item>dark</item>
                    <item>satellite</item>
                    <item>satellite-streets</item>
            <item>traffic-day</item>
            <item>traffic-night</item>
        </string-array>-->

    <!-- supported map languages -->

    <string-array name="languages_array">
        <item>English</item>
        <item>Pусский</item>
        <!--
            <item>Français</item>
            <item>Deutsche</item>
            <item>Español</item>
        -->
    </string-array>

    <!-- Mapbox map symbol layers -->

    <string-array name="symbol_map_layers_array">
        <item>country-label-lg</item>
        <item>country-label-md</item>
        <item>country-label-sm</item>
        <item>state-label-lg</item>
        <item>state-label-md</item>
        <item>state-label-sm</item>
        <item>marine-label-lg-pt</item>
        <item>marine-label-lg-ln</item>
        <item>marine-label-md-pt</item>
        <item>marine-label-md-ln</item>
        <item>marine-label-sm-pt</item>
        <item>marine-label-sm-ln</item>
        <item>place-city-lg-n</item>
        <item>place-city-lg-s</item>
        <item>place-city-md-n</item>
        <item>place-city-md-s</item>
        <item>place-city-sm</item>
        <!--<item>poi-islands</item>-->
        <item>place-town</item>
        <item>place-village</item>
        <item>place-hamlet</item>
        <item>place-suburb</item>
        <item>place-neighbourhood</item>
        <!--<item>poi-islets</item>-->
        <item>airport-label</item>
        <item>poi-scalerank1</item>
        <item>poi-parks-scalerank1</item>
        <item>water-label</item>
        <item>rail-label</item>
        <item>poi-parks-scalerank2</item>
        <item>poi-scalerank2</item>
        <!--<item>interstate_motorway_shields</item>-->
        <!--<item>other-motorway-shields</item>-->
        <item>road-label-large</item>
        <item>road-label-medium</item>
        <item>road-label-small</item>
        <item>poi-parks-scalerank3</item>
        <item>poi-scalerank3</item>
        <item>poi-parks_scalerank4</item>
        <item>poi-scalerank4-l1</item>
        <item>poi-scalerank4-l15</item>
        <item>waterway-label</item>
        <!--<item>contour-index-label</item>-->
        <item>housenum-label</item>
        <item>bridge-oneway-arrows-white</item>
        <!--<item>bridge-oneway-arrows-color</item>-->
        <item>road-oneway-arrows-white</item>
        <!--<item>road-oneway-arrows-color</item>-->
        <item>tunnel-oneway-arrows-white</item>
        <!--<item>tunnel-oneway-arrows-color</item>-->
    </string-array>

</resources>
