<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view"
        android:icon="@drawable/ic_view"
        android:title="@string/action_view"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/action_sync"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>

    <!--app:showAsAction="ifRoom|withText"-->

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        android:orderInCategory="10"
        app:showAsAction="never"
        />

</menu>