<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/addEditScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >


    <LinearLayout
        android:id="@+id/add_edit_city_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        >

<!--
        <TextView
            android:id="@+id/titleAddEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            />
-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_city"
                />-->

            <EditText
                android:id="@+id/cityEditText"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:hint="@string/hint_city_add"
                android:inputType="textCapWords"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittext_background"
                />


        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <Button
        android:id="@+id/editCancelButton"
        android:text="@string/edit_cancel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

<!--        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/textView2"/>-->

        <Button
            android:id="@+id/saveCityButton"
            android:text="@string/edit_save"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>


<!--    <RelativeLayout
        android:id="@+id/add_edit_city_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusableInTouchMode="true"
        >

        <TextView
            android:id="@+id/titleAddEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/titleAddEditTextView"
             android:text="@string/text_city"
            android:textAlignment="viewStart"
            android:layout_above="@+id/editCancelButton"/>

        <EditText
            android:id="@+id/cityEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/hint_city_add"
             android:inputType="textCapWords"
            android:layout_below="@+id/titleAddEditTextView"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView"
            />

        <Button
            android:id="@+id/editCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_cancel"
            android:layout_below="@+id/cityEditText"
            android:layout_alignParentStart="true"
            />

        <Button
            android:id="@+id/saveCityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_save"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>-->



</ScrollView>